# geom2D

./: .gitignore  CMakeLists.txt  GMatrix.cpp  GMatrix.h  GVector.cpp  GVector.h  main.cpp
tests/: CMakeLists.txt  testGVector.cpp
