cmake_minimum_required(VERSION 3.0)
project(test)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
set(GVECTOR_SOURCE_FILES ../GVector.cpp ../GVector.h)
set(GMATRIX_SOURCE_FILES ../GMatrix.cpp ../GMatrix.h)
add_executable(testGVector ${GVECTOR_SOURCE_FILES} ${GMATRIX_SOURCE_FILES} testGVector.cpp)
